--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Adventure and adventurers -- Juvenile fiction'
 - !lcsh 'Outdoor life -- Juvenile fiction'
 - !lcsh 'Camping -- Juvenile fiction'
+- GITenberg
 title: The Outdoor Chums at Cabin Point; Or, The Golden Cup Mystery
 url: http://www.gutenberg.org/ebooks/19743
